[project]
name = "bazarr"
version = "1.4.5"
description = "Subtitle management and download automation for Sonarr and Radarr"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
  "movie",
  "sonarr",
  "episodes",
  "series",
  "download-subtitles",
  "radarr",
  "subliminal",
  "subtitle-downloader",
]
requires-python = ">=3.8,<3.12"
maintainers = [
  {name = "morpheus65535", email = "louis_vezina@hotmail.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: No Input/Output (Daemon)",
  "Framework :: Flask",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: JavaScript",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
  "lxml>=4.3.0,<5.0.0",
  "numpy>=1.12.0",
  "pillow>=9.0.0",
  "setuptools>=75.2.0",
  "webrtcvad-wheels>=2.0.10",
]

[project.optional-dependencies]
postgresql = [
  "psycopg2-binary>=2.9.5",
]

[tool.uv]
dev-dependencies = [
  "pytest-cov>=5.0.0",
  "pytest-flakes>=4.0.5",
  "pytest-mock>=3.14.0",
  "pytest-pep8>=1.0.6",
  "pytest-vcr>=1.0.2",
  "pytest>=8.3.3",
  "requests-mock>=1.12.1",
  "ruff>=0.7.0",
  "setuptools>=75.2.0",
  "sympy>=1.13.3",
  "vcrpy>=1.6.1",
]

[tool.hatch.build.targets.sdist]
ignore-vcs = false
exclude = [
  "/frontend/build",
  "/frontend/node_modules",
]

[tool.hatch.build.targets.wheel.force-include]
"./libs" = "bazarr/libs"
"./custom_libs" = "bazarr/custom_libs"
"./frontend/build" = "bazarr/frontend/build"

[[tool.hatch.build.targets.wheel.hooks.build-scripts.scripts]]
out_dir = "frontend/build"
clean_artifacts = true
clean_out_dir = true
work_dir = "frontend"
commands = [
  "npm install",
  "npm run build",
]
artifacts = [
  "frontend/build/*",
]

[tool.ruff]
exclude = [
  "libs",
  "custom_libs",
  "frontend",
]
line-length = 100
target-version = "py311"

[tool.ruff.format]

[tool.ruff.lint]

[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"
