[project]
name = "bazarr"
version = "1.4.5"
description = "Subtitle management and download automation for Sonarr and Radarr"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
  "movie",
  "sonarr",
  "episodes",
  "series",
  "download-subtitles",
  "radarr",
  "subliminal",
  "subtitle-downloader",
]
requires-python = ">=3.8,<3.13"
maintainers = [
  {name = "morpheus65535", email = "louis_vezina@hotmail.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: No Input/Output (Daemon)",
  "Framework :: Flask",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: JavaScript",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
  "alembic>=1.13.3",
  "aniso8601>=9.0.1",
  "appdirs>=1.4.4",
  "apprise>=1.9.0",
  "apscheduler>=3.10.4",
  "attr>=0.3.2",
  "attrs>=24.2.0",
  "backports-functools-lru-cache>=2.0.0",
  "blinker>=1.8.2",
  "charset-normalizer>=3.4.0",
  "cloudscraper==1.2.58",
  "deep-translator>=1.11.4",
  "dnspython>=2.6.1",
  "dogpile-cache>=1.3.3",
  "dynaconf>=3.2.6",
  "fcache>=0.5.2",
  "fese>=0.3.0",
  "ffsubsync>=0.4.26",
  "flask-cors>=5.0.0",
  "flask-migrate>=4.0.7",
  "flask-restx>=1.3.0",
  "flask-socketio>=5.4.1",
  "ftfy>=6.2.0",
  "ga4mp>=2.0.4",
  "guess-language-spirit>=0.5.3",
  "guessit>=3.8.0",
  "html5lib>=1.1",
  "inflect>=7.4.0",
  "js2py>=0.74",
  "json-tricks>=3.17.3",
  "knowit>=0.4.0",
  "lxml>=4.3.0,<5.0.0",
  "numpy>=1.12.0; python_version < '3.12'",
  "numpy>=1.26.4,<2; python_version >= '3.12'",
  "pillow>=9.0.0",
  "pycountry>=24.6.1",
  "pyrsistent>=0.20.0",
  "pysocks>=1.7.1",
  "pysrt>=1.1.2",
  "python-anticaptcha>=1.0.0",
  "pytz-deprecation-shim>=0.1.0.post0",
  "pywin32>=308 ; platform_system == 'Windows'",
  "rarfile>=4.2",
  "requests-toolbelt>=1.0.0",
  "requests>=2.32.3",
  "retry>=0.9.2",
  "semver>=3.0.2",
  "setuptools>=75.2.0",
  "signalrcore>=0.9.5",
  "socks>=0",
  "textdistance>=4.6.3",
  "tld>=0.13",
  "unidecode>=1.3.8",
  "waitress>=3.0.0",
  "webrtcvad-wheels>=2.0.10",
  "whichcraft>=0.6.1",
]

[project.optional-dependencies]
postgresql = [
  "psycopg2-binary>=2.9.5",
]

[tool.uv]
dev-dependencies = [
  "pytest-cov>=5.0.0",
  "pytest-flakes>=4.0.5",
  "pytest-mock>=3.14.0",
  "pytest-pep8>=1.0.6",
  "pytest-vcr>=1.0.2",
  "pytest>=8.3.3",
  "requests-mock>=1.12.1",
  "ruff>=0.7.0",
  "setuptools>=75.2.0",
  "sympy>=1.13.3",
  "vcrpy>=4.3.1",
]

[tool.hatch.build.targets.sdist]
ignore-vcs = false
exclude = [
  "/frontend/build",
  "/frontend/node_modules",
]

[tool.hatch.build.targets.wheel.force-include]
"./custom_libs" = "bazarr/custom_libs"
"./frontend/build" = "bazarr/frontend/build"

[[tool.hatch.build.targets.wheel.hooks.build-scripts.scripts]]
out_dir = "frontend/build"
clean_artifacts = true
clean_out_dir = true
work_dir = "frontend"
commands = [
  "npm install",
  "npm run build",
]
artifacts = [
  "frontend/build/*",
]

[tool.ruff]
exclude = [
  "custom_libs",
  "frontend",
]
line-length = 100
target-version = "py311"

[tool.ruff.format]

[tool.ruff.lint]

[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"
